# NetworkMonitor

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
frontend/: Cargo.toml  functions.js  index.html  mapper.js
frontend/src/: main.rs
net_analyzer/: Cargo.toml
net_analyzer/src/: lib.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/net-analyzer/: Cargo.toml
src-tauri/net-analyzer/src/: lib.rs
src-tauri/src/: bootstrapper.rs  database.rs  firebase.rs  main.rs  net_analyzer.rs  security.rs  structs.rs
ui/: functions.js  index.html
yew/public/: bridge.js
