[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["fs-all", "os-all", "path-all"] }
# net-analyzer = {path = "./net-analyzer"}
tracert = "0.4.1"
ipnetwork = "0.19.0"
libsqlite3-sys = "0.25.2"
platform-dirs = "0.3.0"
system-info = "0.1.2"
if-addrs = "0.10.1"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
