[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = { version = "1.0.48", features = ["std"] }
serde = { version = "1.0.104", features = ["derive"] }
tauri = { version = "1.2.4", features = ["fs-all", "os-all", "path-all"] }
# net-analyzer = {path = "./net-analyzer"}
tracert = "0.4.1"
ipnetwork = "0.19.0"
libsqlite3-sys = "0.25.2"
platform-dirs = "0.3.0"
system-info = "0.1.2"
if-addrs = "0.10.1"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
js-sys = "0.3.61"
tokio = { version = "1.26.0", features = ["macros", "process"] }
futures = "0.3.27"
dns-lookup = "1.0.8"
mac_oui = { version = "0.4.7", features = ["with-db"] }
time = { version = "0.3.20", features = ["local-offset", "formatting"] }
indicatif = "0.17.3"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
